--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -306,7 +306,8 @@ header {
                     padding-top: 0.6rem;
                     border-right: 0.01rem solid var(--d);
                     display: flex;
-                    justify-content: space-between;
+                    // justify-content: space-between;
+                    gap: 0.14rem;
                     flex-direction: column;
                     padding-bottom: 0.55rem;
 
