--- a/src/scss/layout/_case.scss
+++ b/src/scss/layout/_case.scss
@@ -56,6 +56,7 @@
                 place-content: center;
                 background: var(--f);
                 transition: opacity var(--ease) 0.3s;
+                margin-top: 0.2rem;
 
                 @media screen and (max-width: 768px) {
                     display: none;
@@ -69,6 +70,7 @@
             .t {
                 color: var(--0);
                 line-height: 1.2;
+                @include ellipsis(2);
                 transition: color var(--ease) 0.3s;
             }
 
@@ -172,7 +174,7 @@
         align-items: center;
 
         .s{
-            text-align: justify;
+            // text-align: justify;
         }
 
         @media screen and (max-width: 768px) {
