--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -47,11 +47,19 @@ header {
     height: 0.8rem;
     border-bottom: 0.01rem solid var(--d);
 
+    .logo {
+        max-width: 0.44rem;
+
+        @media screen and (max-width:1024px) {
+            max-width: none;
+        }
+    }
+
     @media screen and (max-width:1024px) {
         padding: 0 0.3rem;
 
         .logo img {
-            width: 1.05rem;
+            width: 0.4rem;
         }
     }
 
