--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -285,7 +285,7 @@
         max-width: 7.5rem;
 
         .s{
-            text-align: justify;
+            // text-align: justify;
         }
 
         @media screen and (max-width:768px) {
