--- a/src/scss/layout/_faq.scss
+++ b/src/scss/layout/_faq.scss
@@ -95,7 +95,7 @@
 
             >li>p {
                 color: var(--0);
-                font-family: "Poppins-Medium";
+                font-family: "OpenSans-Medium";
                 display: flex;
                 justify-content: space-between;
                 gap: 0.1rem;
