--- a/src/scss/layout/_mp.scss
+++ b/src/scss/layout/_mp.scss
@@ -52,7 +52,7 @@
                 margin-bottom: 0.2rem;
 
                 a {
-                    font-family: "Poppins-Bold";
+                    font-family: "OpenSans-Bold";
                 }
             }
 
