--- a/src/scss/common/_common.scss
+++ b/src/scss/common/_common.scss
@@ -11,7 +11,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "Poppins", 'PingFang SC', 'Microsoft YaHei', 'Microsoft YaHei UI', 'SimSun', 'SimHei', 'Arial';
+    font-family: "OpenSans-Regular", 'PingFang SC', 'Microsoft YaHei', 'Microsoft YaHei UI', 'SimSun', 'SimHei', 'Arial';
 }
 
 ::-webkit-scrollbar {
@@ -41,7 +41,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Poppins-Bold";
+    font-family: "OpenSans-Bold";
 }
 
 body,
