--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -123,7 +123,7 @@
 
         h5 {
             font-weight: normal;
-            font-family: 'Poppins';
+            font-family: 'OpenSans-Regular';
             @include ellipsis(1);
         }
 
@@ -620,7 +620,7 @@
                     p:last-child {
                         max-width: 4rem;
                         width: 100%;
-                        @include ellipsis(2);
+                        @include ellipsis(3);
                     }
                 }
             }
