--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -131,6 +131,10 @@
 
                 a {
                     margin: 0.24rem auto 0 0;
+
+                    &[hover-word]::after{
+                        font-weight: bold;
+                    }
                 }
             }
 
